--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Berserk</title>
 </head>
@@ -28,15 +28,15 @@
         <main class="main-index">
             <section class="cards">
                 <div class="card">
-                    <img src="Berserk.jpg" alt="" class="img-cards">
+                    <img src="imgs/historia.jpg" alt="" class="img-cards">
                     <p><a href="#" class="card-link">História</a></p>
                 </div>
                 <div class="card">
-                    <img src="115409-dame-farnese-dans-berserk-amp_main_img-1.webp" alt="" class="img-cards">
+                    <img src="imgs/personagens.webp" alt="" class="img-cards">
                     <p><a href="#" class="card-link">Personagens</a></p>
                 </div>
                 <div class="card">
-                    <img src="berserk-kentaro-miura-guts-manga-wallpaper-preview.jpg" alt="" class="img-cards">
+                    <img src="imgs/novidades.jpg" alt="" class="img-cards">
                     <p><a href="#" class="card-link">Novidades</a></p>
                 </div>
             </section>
